# cppCommon

./: .gitignore  CMakeLists.txt  README.md
skill/api/: Box.h  Maps.h  SkillException.h  SkillFile.h
skill/fieldTypes/: AnnotationType.h  BuiltinFieldType.h  FieldType.h
skill/internal/: AbstractStoragePool.h  DistributedField.cpp  DistributedField.h  FieldDeclaration.h  FileParser.h  LazyField.h  StoragePool.h  StringPool.h
skill/iterators/: DynamicDataIterator.h  StaticDataIterator.h  TypeHierarchyIterator.h
skill/streams/: FileOutputStream.cpp  FileOutputStream.h  InStream.cpp  InStream.h  MappedOutStream.cpp  MappedOutStream.h
src/api/: AbstractField.h  Box.h  Object.h  SkillException.h  SkillFile.cpp  SkillFile.h  String.h  StringAccess.h
src/fieldTypes/: BuiltinFieldType.h  FieldType.h
src/internal/: AbstractStoragePool.cpp  AbstractStoragePool.h  BasePool.h  FieldDeclaration.h  FileParser.h  FileStructure.h  LazyField.h  SkillState.h  StoragePool.h  StringPool.cpp  StringPool.h  UnknownBasePool.cpp  UnknownBasePool.h  UnknownObject.h
src/streams/: FileInputStream.h  InStream.h
test/streams/: arrayTest.cpp  mapTest.cpp  parseTest.cpp  setTest.cpp  streamTest.cpp  stringTest.cpp
